# openral

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.runtime  GOVERNANCE.md  Justfile  NOTICE  README.md  SECURITY.md  SUPPORT.md  conftest.py  copilot-session-d1d8eee7-0fb8-4ea5-b69e-86c20f5df18a.md  docker-compose.dev.yml  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml
cpp/openral_safety_kernel/: .clang-tidy  CMakeLists.txt  README.md  package.xml
cpp/openral_safety_kernel/include/openral_safety_kernel/: collision.hpp  envelope.hpp  lifecycle_kernel.hpp  otel.hpp  result.hpp  validator.hpp
cpp/openral_safety_kernel/launch/: kernel_only.launch.py
cpp/openral_safety_kernel/scripts/: dev_run.sh
cpp/openral_safety_kernel/src/: collision.cpp  envelope.cpp  lifecycle_kernel.cpp  otel.cpp  safety_kernel_node.cpp  validator.cpp
cpp/openral_safety_kernel/test/: test_collision.cpp  test_lifecycle_kernel.cpp  test_no_alloc.cpp  test_validator.cpp
cpp/openral_safety_kernel/test/launch/: test_e2e_otel.py  test_e2e_passthrough.py  test_e2e_violation.py
cpp/opentelemetry_cpp_vendor/: CMakeLists.txt  package.xml
python/cli/: README.md  pyproject.toml
python/cli/src/openral_cli/: __init__.py  _hf_publish.py  _rskill_doc_validator.py  _rskill_intel.py  _rskill_scaffolder.py  autodetect.py  check.py  collision.py  dataset.py  deploy_sim.py  install.py  main.py  prompt.py  robot.py
python/cli/tests/: test_repl_banner.py  test_vendor_urdf.py
python/core/: README.md  pyproject.toml
python/core/src/openral_core/: __init__.py  assets.py  detection_tracker.py  exceptions.py  geometry.py  loaders.py  schemas.py  urdf_resolve.py
python/core/tests/: test_asset_resolution.py  test_assets.py  test_schemas_assets.py  test_urdf_resolve.py
python/dataset/: README.md  pyproject.toml
python/dataset/src/openral_dataset/: __init__.py  bag.py  converter.py  frame_trace.py  recorder.py  schema_map.py  sinks.py
python/dataset/tests/: conftest.py  test_bag.py  test_converter.py  test_frame_trace.py  test_multi_robot_bridge.py  test_recorder.py  test_schema_map.py  test_sink_lerobot.py
python/detect/: README.md  pyproject.toml
python/detect/src/openral_detect/: __init__.py  assemble.py  compatibility.py  detect.py  registry.py  report.py  scaffold.py
python/hal/: README.md  pyproject.toml
python/hal/src/openral_hal/: __init__.py  _base.py  _camera_rig.py  _mujoco_arm.py  _openarm_v2_assets.py  _real_description.py  _sensor_wiring.py  aloha.py  depth_cloud.py  flexiv_rizon4.py  franka_panda.py  franka_panda_real.py  g1.py  h1.py  lifecycle.py  mobile_base_bridge.py  openarm.py  panda_mobile.py  proprio_snapshot.py  protocol.py  resolver.py  ros_control.py  sawyer_real.py  sim_attached.py  sim_bringup.py  sim_sensor_bridge.py  sim_transport.py  so100_follower.py  so100_mujoco.py  so100_sim.py  ur.py  ur_real.py
python/hal/tests/: test_build_hal_scene_attach.py  test_build_hal_so101_cameras.py  test_build_hal_soarm_cameras.py  test_camera_rig.py  test_hal_lifecycle_sigint_shape.py  test_joint_name_resolution.py  test_mujoco_arm_staleness_and_idle_step.py  test_proprio_snapshot.py  test_sim_attached_action_dim.py  test_sim_attached_idle_step.py  test_sim_attached_sim_time.py  test_sim_bringup_ignore_done.py  test_sim_sensor_bridge_camera_key.py  test_sim_sensor_bridge_camera_tf.py  test_sim_sensor_bridge_depth_gate.py  test_sim_sensor_bridge_import.py  test_sim_sensor_bridge_scan_gate.py
python/observability/: README.md  pyproject.toml
python/observability/src/openral_observability/: __init__.py  _sdk.py  cli.py  diagnostics.py  failure_bus.py  lifecycle.py  logging.py  metrics.py  producer.py  propagation.py  semconv.py  system_metrics.py  tracing.py  tracing_lttng.py
python/observability/tests/: conftest.py  test_cli_root_span.py  test_dashboard_app.py  test_dashboard_discovery.py  test_dashboard_mjpeg_integration.py  test_dashboard_store.py  test_dashboard_topics.py  test_dashboard_trace_index.py  test_metrics.py  test_producer_thumbnails.py  test_propagation.py  test_replay_correlator.py  test_sdk_init.py  test_semconv.py  test_span_helpers.py  test_structlog_bridge.py  test_system_metrics.py  test_tracing_lttng.py  test_worker_context.py
python/reasoner/: README.md  pyproject.toml
python/reasoner/src/openral_reasoner/: __init__.py  active_search.py  completion.py  context.py  core.py  critic_watchdog.py  memory.py  mission.py  null_reasoner.py  palette.py  plan.py  protocol.py  spatial_query.py  tool_use.py
python/reasoner/tests/: test_critic_watchdog.py  test_critic_watchdog_success.py  test_null_reasoner.py
python/rskill/: README.md  pyproject.toml
python/rskill/src/openral_rskill/: __init__.py  _diagnostics.py  _lerobot_compat.py  _vla_core.py  base.py  engine_cache.py  executor.py  gpu_passthrough.py  joint_goal_rskill.py  loader.py  look_at_rskill.py  pose_goal_rskill.py  quantization.py  ros_action_rskill.py  runtime.py  runtime_onnx.py  runtime_pytorch.py  runtime_tensorrt.py  smolvla.py  testing.py
python/runner/: README.md  pyproject.toml
python/runner/src/openral_runner/: __init__.py  base.py  clock.py  dataset_recorder_bridge.py  deploy_runner.py  factory.py  hardware.py  protocol.py  ros_publishing_hal.py  safety.py  sensor_reader.py  slam_bridge.py  world_cloud_bridge.py
python/sensors/: README.md  pyproject.toml
python/sensors/src/openral_sensors/: __init__.py  _reader_protocol.py  catalog.py  force_torque.py  luxonis.py  realsense.py  ros_publisher.py  usb_uvc.py
python/sim/: README.md  pyproject.toml
python/sim/src/openral_sim/: __init__.py  _assets.py  _deps.py  _quantization.py  _sidecar_common.py  _video.py  _website_video.py  (+9 more)
python/state_adapter/: README.md  pyproject.toml
python/state_adapter/tests/: test_human300_16d_assembler.py  test_libero_eef8d_assembler.py
python/wam/: README.md  pyproject.toml
python/wam/tests/: test_null_wam.py
python/world_state/: README.md  pyproject.toml
(+1089 files in other folders)
