[project]
name = "openral-core"
version = "0.1.0"
description = "OpenRAL Pydantic schemas — normative contract for the OpenRAL layer interfaces"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.7,<3",  # reason: normative schema framework
    "PyYAML>=6.0",       # reason: rSkill manifest (rskill.yaml) loader
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openral_core"]
